--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,12 @@ project(hyprland-plugins
 
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 add_subdirectory(borders-plus-plus)
 add_subdirectory(csgo-vulkan-fix)
 add_subdirectory(hyprbars)
 add_subdirectory(hyprexpo)
-add_subdirectory(hyprfocus)
 add_subdirectory(hyprscrolling)
 add_subdirectory(hyprtrails)
 add_subdirectory(hyprwinwrap)
